traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:19: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalDiagonal:20: error: not found: value cpt
    cpt+=1
    ^TraversalDiagonal:25: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalDiagonal:26: error: not found: value cpt
    cpt+=1
    ^TraversalDiagonal:31: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalDiagonal:32: error: not found: value cpt
    cpt+=1
    ^